# FeOS

./: .gitignore  Cargo.toml  Makefile  build.rs  flake.nix
.cargo/: config.toml
.github/workflows/: integration.yml  lint.yaml  release-oci.yaml  test.yaml
cli/: Cargo.toml
cli/src/: container_commands.rs  vm_commands.rs
cli/src/host_commands/: kernel_stats.rs
client/src/: client.rs  client_container.rs
feos/: Cargo.toml
feos/proto/: build.rs
feos/proto/src/: lib.rs
feos/services/container-service/: Cargo.toml
feos/services/host-service/: Cargo.toml
feos/services/image-service/: Cargo.toml
feos/services/image-service/src/: error.rs  filestore.rs  lib.rs  worker.rs
feos/services/task-service/: Cargo.toml
feos/src/: lib.rs  setup.rs
feos/tests/: integration_tests.rs
go/feos-go/: Makefile  go.mod
hack/: README.md  hack.mk
hack/build-container/: Dockerfile
hack/cloud-hypervisor/: make.mk
hack/disk/: boot_config.json  make.mk
hack/initramfs/: make.mk  mk-initramfs
hack/libvirt/: libvirt-kvm.xml
hack/ucode/: make.mk  mk-ucode
hack/uki/: make.mk
nix/: feos.nix  initramfs.nix  module.nix  vm.nix
proto/: hostservice.proto  imageservice.proto  vmservice.proto
proto/v1/: container.proto  host.proto  image.proto  task.proto  vm.proto
scripts/: dhcpv6_server.py
src/: daemon.rs  dhcpv6.rs  filesystem.rs  lib.rs  main.rs  network.rs
src/container/: mod.rs
src/host/: info.rs
src/isolated_container/: mod.rs
src/network/: dhcpv6.rs  mod.rs  utils.rs
src/vm/: mod.rs
tests/: dhcpv6_client_integration.rs  integration_test.rs
(+28 files in other folders)
